--- a/FlickrVisualizer/Base.lproj/Main.storyboard
+++ b/FlickrVisualizer/Base.lproj/Main.storyboard
@@ -6,6 +6,13 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="BebasNeue.otf">
+            <string>BebasNeue</string>
+            <string>BebasNeue</string>
+            <string>BebasNeue</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Thumbs View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -21,15 +28,16 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Jpv-AU-znz">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="8Vk-tp-srY">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="50" height="84"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="5" minY="5" maxX="5" maxY="5"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="r9S-6N-UmC">
-                                        <rect key="frame" x="5" y="84" width="50" height="50"/>
+                                        <rect key="frame" x="5" y="89" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -43,16 +51,17 @@
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="q2F-tM-gjZ">
-                                            <rect key="frame" x="0.0" y="44" width="600" height="40"/>
+                                            <rect key="frame" x="0.0" y="45" width="600" height="39"/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                             <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="wbg-sB-G6Q">
                                                 <size key="itemSize" width="50" height="40"/>
                                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                <inset key="sectionInset" minX="5" minY="0.0" maxX="5" maxY="0.0"/>
                                             </collectionViewFlowLayout>
                                             <cells>
                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="eZ6-TG-4H3">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="40"/>
+                                                    <rect key="frame" x="5" y="-1" width="50" height="40"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                         <rect key="frame" x="0.0" y="0.0" width="50" height="40"/>
@@ -62,22 +71,25 @@
                                                 </collectionViewCell>
                                             </cells>
                                         </collectionView>
-                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="250" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ord-Rt-t7f">
-                                            <rect key="frame" x="8" y="8" width="517" height="30"/>
+                                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="250" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ord-Rt-t7f">
+                                            <rect key="frame" x="8" y="8" width="532" height="30"/>
+                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="aai-uI-xpj"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <fontDescription key="fontDescription" name="BebasNeue" family="Bebas Neue" pointSize="14"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocr-PM-wiJ">
-                                            <rect key="frame" x="533" y="8" width="46" height="30"/>
-                                            <state key="normal" title="Button"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocr-PM-wiJ">
+                                            <rect key="frame" x="548" y="8" width="31" height="31"/>
+                                            <state key="normal" image="ic-search"/>
                                             <connections>
                                                 <action selector="onAddClick:" destination="Xv3-Rr-RQr" eventType="touchUpInside" id="zyz-sL-kPp"/>
                                             </connections>
                                         </button>
                                     </subviews>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstItem="ord-Rt-t7f" firstAttribute="top" secondItem="Xv3-Rr-RQr" secondAttribute="top" constant="8" id="0wn-BP-Nt5"/>
                                         <constraint firstAttribute="bottom" secondItem="q2F-tM-gjZ" secondAttribute="bottom" id="2cS-If-2Oj"/>
@@ -127,18 +139,24 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="a1Y-ZX-xzU">
                                 <rect key="frame" x="0.0" y="64" width="600" height="300"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jHt-eN-nfM">
-                                <rect key="frame" x="28" y="382" width="552" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <rect key="frame" x="28" y="382" width="552" height="24"/>
+                                <fontDescription key="fontDescription" name="BebasNeue" family="Bebas Neue" pointSize="20"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YfO-pZ-eWQ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                </textAttributes>
                                 <items>
                                     <navigationItem title="Title" id="OvY-PB-xYq">
-                                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="143-gX-aQy">
+                                        <barButtonItem key="rightBarButtonItem" image="ic-close" id="143-gX-aQy">
+                                            <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <connections>
                                                 <action selector="onCloseClick:" destination="fA7-Zk-cnd" id="TAR-7r-LaQ"/>
                                             </connections>
@@ -147,17 +165,23 @@
                                 </items>
                             </navigationBar>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="JWP-De-M6b">
-                                <rect key="frame" x="23" y="411" width="557" height="169"/>
+                                <rect key="frame" x="23" y="414" width="557" height="166"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="BebasNeue" family="Bebas Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Qmw-zs-tmM">
+                                <rect key="frame" x="282" y="195" width="37" height="37"/>
+                                <color key="color" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="JWP-De-M6b" firstAttribute="leading" secondItem="jHt-eN-nfM" secondAttribute="leading" constant="-5" id="0YK-P7-Fuc"/>
                             <constraint firstItem="YfO-pZ-eWQ" firstAttribute="leading" secondItem="CFQ-eA-XjO" secondAttribute="leading" id="6cI-5A-Zdy"/>
+                            <constraint firstItem="Qmw-zs-tmM" firstAttribute="centerY" secondItem="a1Y-ZX-xzU" secondAttribute="centerY" id="Gtu-AA-Pgu"/>
+                            <constraint firstItem="Qmw-zs-tmM" firstAttribute="centerX" secondItem="a1Y-ZX-xzU" secondAttribute="centerX" id="HQP-CJ-lJE"/>
                             <constraint firstAttribute="trailing" secondItem="YfO-pZ-eWQ" secondAttribute="trailing" id="WXS-ja-u1a"/>
                             <constraint firstItem="YfO-pZ-eWQ" firstAttribute="top" secondItem="CFQ-eA-XjO" secondAttribute="top" constant="20" id="ZKW-yD-Fpk"/>
                             <constraint firstItem="jHt-eN-nfM" firstAttribute="leading" secondItem="CFQ-eA-XjO" secondAttribute="leadingMargin" constant="8" id="cVQ-yV-RSE"/>
@@ -173,6 +197,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="Qmw-zs-tmM" id="rTY-Zp-pdx"/>
                         <outlet property="imgView" destination="a1Y-ZX-xzU" id="kPs-Jk-sXw"/>
                         <outlet property="lbDescription" destination="JWP-De-M6b" id="aBr-TU-Yca"/>
                         <outlet property="lbTitle" destination="jHt-eN-nfM" id="q26-bS-DnO"/>
@@ -184,4 +209,8 @@
             <point key="canvasLocation" x="1172" y="372"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="ic-close" width="32" height="32"/>
+        <image name="ic-search" width="31" height="31"/>
+    </resources>
 </document>
