--- a/FlickrVisualizer/View/TBWTagCell.xib
+++ b/FlickrVisualizer/View/TBWTagCell.xib
@@ -4,6 +4,12 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="BebasNeue.otf">
+            <string>BebasNeue</string>
+            <string>BebasNeue</string>
+        </mutableArray>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -14,22 +20,26 @@
                 <rect key="frame" x="0.0" y="0.0" width="137" height="40"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0FN-2e-UbL">
-                        <rect key="frame" x="8" y="9" width="42" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.84313725490000002" green="0.21176470589999999" blue="0.91764705879999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="8" y="12" width="32" height="21"/>
+                        <fontDescription key="fontDescription" name="BebasNeue" family="Bebas Neue" pointSize="17"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sh1-vL-qgk">
-                        <rect key="frame" x="107" y="5" width="30" height="30"/>
-                        <state key="normal" title="x"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sh1-vL-qgk">
+                        <rect key="frame" x="107" y="6" width="30" height="32"/>
+                        <fontDescription key="fontDescription" name="BebasNeue" family="Bebas Neue" pointSize="16"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <state key="normal" title="x">
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        </state>
                     </button>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
-            <color key="backgroundColor" red="0.41868898269999999" green="0.77949053049999995" blue="0.92061680560000003" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="0FN-2e-UbL" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="5G5-DO-2i3"/>
-                <constraint firstItem="Sh1-vL-qgk" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="R2q-tf-v7i"/>
+                <constraint firstItem="0FN-2e-UbL" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="2" id="5G5-DO-2i3"/>
+                <constraint firstItem="Sh1-vL-qgk" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" constant="2" id="R2q-tf-v7i"/>
                 <constraint firstItem="0FN-2e-UbL" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="8" id="YlG-aX-8rE"/>
                 <constraint firstAttribute="trailing" secondItem="Sh1-vL-qgk" secondAttribute="trailing" id="amy-sx-gyl"/>
             </constraints>
