added empty state

--- a/FlickrVisualizer/Base.lproj/Main.storyboard
+++ b/FlickrVisualizer/Base.lproj/Main.storyboard
@@ -11,6 +11,7 @@
             <string>BebasNeue</string>
             <string>BebasNeue</string>
             <string>BebasNeue</string>
+            <string>BebasNeue</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -120,6 +121,12 @@
                                     <action selector="onBreakitClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zeb-ym-Myl"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nope - nothing to see here!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XS3-58-O5v">
+                                <rect key="frame" x="185" y="284" width="230" height="32"/>
+                                <fontDescription key="fontDescription" name="BebasNeue" family="Bebas Neue" pointSize="26"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -128,11 +135,14 @@
                             <constraint firstItem="Jpv-AU-znz" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="SI2-Kh-SeY"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="957-tB-KMX" secondAttribute="bottom" constant="20" id="XYb-pO-Cv4"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Jpv-AU-znz" secondAttribute="bottom" id="sM6-P8-Lkd"/>
+                            <constraint firstItem="XS3-58-O5v" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vAM-AD-T7v"/>
+                            <constraint firstItem="XS3-58-O5v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yKl-OA-da3"/>
                             <constraint firstItem="Jpv-AU-znz" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" id="yyL-XR-kui"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="Jpv-AU-znz" id="iAB-Sv-RXS"/>
+                        <outlet property="lbEmpty" destination="XS3-58-O5v" id="DmT-YV-EHQ"/>
                         <segue destination="fA7-Zk-cnd" kind="show" identifier="segue-detail" id="twl-Tm-wcm"/>
                     </connections>
                 </viewController>
